# embedded-avionics-software-stack

./: .gitignore  CMakeLists.txt  README.md
include/avionics/drivers/: ISensorDriver.hpp  SimulatedImuDriver.hpp
include/avionics/messages/: SensorMessages.hpp
include/avionics/middleware/: IMessageBus.hpp  LocalMessageBus.hpp
src/application/: main.cpp
src/drivers/imu/: SimulatedImuDriver.cpp
src/middleware/message_bus/: LocalMessageBus.cpp
